@@ -1,5 +1,7 @@
 === HEAD
 
+* Deprecate creating Model class methods automatically from plugin public dataset methods (jeremyevans)
+
 * Add Sequel.cache_anonymous_models accessor (jeremyevans)
 
 * Deprecate Sequel::Model.cache_anonymous_models accessor (jeremyevans)
